# pingpong-tourney

./: .gitignore  CLAUDE.md  README.md  app.js  index.html  start.sh  style.css
backend/: alembic.ini  pyproject.toml
backend/alembic/versions/: 085843dfa3b2_initial.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: tournament.py
backend/tests/: conftest.py  test_tournament.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: MatchPlay.tsx  Matches.tsx  Setup.tsx  Standings.tsx
